fixed spacing of buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1636,6 +1636,7 @@ section {
   text-transform: uppercase;
   font-size: 18px;
   padding: 12px 16px;
+  min-width: 150px;
   display: inline-block;
   background: #fd5701;
   color: #fff;
